migration step 2:
- ng new + install bootstrap